--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
             spec:
               accessModes: ["ReadWriteOnce"]
               volumeName: prometheus-alerts
-              storageClassName: local
+              storageClassName: nfs-client
               resources:
                 requests:
                   storage: 2Gi
@@ -152,7 +152,7 @@ spec:
             spec:
               accessModes: ["ReadWriteOnce"]
               volumeName: prometheus-db
-              storageClassName: local
+              storageClassName: nfs-client
               resources:
                 requests:
                   storage: 5Gi
